2015-01-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 config/sample-headers/compiler/VisualStudio2010/pqxx/config-public-compiler.h,
 config/sample-headers/compiler/gcc-4.4/pqxx/config-public-compiler.h,
 configitems,
 configure.ac.in,
 include/pqxx/config.h.in,
 include/pqxx/strconv.hxx,
 src/strconv.cxx,
 test/test046.cxx,
 test/test074.cxx:
 - Always enable support for the "long double" type.
2015-01-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 config/sample-headers/compiler/VisualStudio2010/pqxx/config-public-compiler.h,
 config/sample-headers/compiler/gcc-4.4/pqxx/config-public-compiler.h,
 configitems,
 configure.ac.in,
 include/pqxx/config.h.in,
 include/pqxx/strconv.hxx,
 src/strconv.cxx,
 test/test000.cxx:
 - Always enable support for the "long long" type.
2015-01-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 config/sample-headers/compiler/gcc-4.4/pqxx/config-internal-compiler.h,
 config/sample-headers/compiler/gcc-4.4/pqxx/config-public-compiler.h:
 - Added sample headers for g++ 4.4.
 config/sample-headers/compiler/gcc-4.2:
 - Removed support for g++ 4.2.
2015-01-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 config/sample-headers/compiler/VisualStudio2010/pqxx/config-public-compiler.h,
 config/sample-headers/compiler/gcc-4.2/pqxx/config-public-compiler.h,
 configitems, configure.ac.in, include/pqxx/compiler-public.hxx,
 include/pqxx/largeobject.hxx:
 - Removed workaround for broken iterator definition.
 - Removed workaround for broken "using" implementation.
 include/pqxx/compiler-public.hxx:
 - Raised minimum Visual Studio version to the 2010 release.
 - Removed tweak for old Compaq C++ for Alpha.
2015-01-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 README, README-UPGRADE, win32/INSTALL.txt:
 - Document updated requirements.
 doc/libpqxx.xml:
 - Update to reflect today's C++ world.
 - Freshen text a bit.
2015-01-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 config/sample-headers/libpq/8.0/pqxx/config-internal-libpq.h,
 config/sample-headers/libpq/8.1/pqxx/config-internal-libpq.h,