@@ -16,7 +16,6 @@ PQXX_HAVE_CPP_PRAGMA_MESSAGE	public	compiler
 PQXX_HAVE_CPP_WARNING	public	compiler
 PQXX_HAVE_DISTANCE	internal	compiler
 PQXX_HAVE_NAN	internal	compiler
-PQXX_HAVE_C_NAN	internal	compiler
 PQXX_HAVE_GCC_VISIBILITY	internal	compiler
 PQXX_HAVE_MOVE	public	compiler
 PQXX_HAVE_NOEXCEPT	public	compiler
@@ -26,7 +25,6 @@ PQXX_HAVE_PQESCAPEIDENTIFIER	internal	libpq
 PQXX_HAVE_PQISTHREADSAFE	internal	libpq
 PQXX_HAVE_PQENCRYPTPASSWORD	internal	libpq
 PQXX_HAVE_PQUNESCAPEBYTEA_9	internal	libpq
-PQXX_HAVE_QUIET_NAN	internal	compiler
 PQXX_HAVE_SHARED_PTR	public	compiler
 PQXX_HAVE_SLEEP	internal	compiler
 PQXX_HAVE_STRERROR_R	internal	compiler
